# CosmicRayTrap

./: CMakeLists.txt  GNUmakefile  MagFieldCal.py  MagFieldCal1.py  MagMap3D.sh  README.md  cmd.file  mmtMain.cc  readh5.cpp  run1.mac  setup.file  testBz.py
include/: mmtActionInitialization.hh  mmtAnalysis.hh  mmtDetectorConstruction.hh  mmtEventAction.hh  mmtMagField.hh  mmtPrimaryGeneratorAction.hh  mmtPrimaryGeneratorMessenger.hh  mmtRunAction.hh  mmtSteppingAction.hh  mmtTrackingAction.hh  mmtTrajectory.hh  mmtTrajectoryPoint.hh
src/: interpolation.cc  mmtActionInitialization.cc  mmtDetectorConstruction.cc  mmtEventAction.cc  mmtMagField.cc  mmtPrimaryGeneratorAction.cc  mmtPrimaryGeneratorMessenger.cc  mmtRunAction.cc  mmtSteppingAction.cc  mmtTrackingAction.cc  mmtTrajectory.cc  mmtTrajectoryPoint.cc  pyinterpolate.py
